force-app/main/default/objects/b3o__Search_and_Match_Settings__c/b3o__Search_and_Match_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Search and Match Settings</label>
</CustomObject>