force-app/main/default/objects/b3o__Search_and_Match_Settings__c/fields/b3o__Contacts_Extended_Filter__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contacts_Extended_Filter__c</fullName>
    <label>Contacts Extended Filter</label>
    <type>TextArea</type>
</CustomField>