force-app/main/default/objects/b3o__Search_and_Match_Settings__c/fields/b3o__Search_Contact_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>b3o__Search_Contact_Record_Types__c</fullName>
    <inlineHelpText>Comma separated list of searchable contact record types</inlineHelpText>
    <label>Search Contact Record Types</label>
    <type>TextArea</type>
</CustomField>