force-app/main/default/objects/b3o__Search_and_Match_Settings__c/fields/b3o__Search_Job_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>b3o__Search_Job_Record_Types__c</fullName>
    <label>Search Job Record Types</label>
    <type>TextArea</type>
</CustomField>